--- a/Week5/Week5-TIM-IC.ioc
+++ b/Week5/Week5-TIM-IC.ioc
@@ -6,7 +6,7 @@ Dma.TIM2_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM2_CH1.0.Instance=DMA1_Stream5
 Dma.TIM2_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM2_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH1.0.Mode=DMA_NORMAL
+Dma.TIM2_CH1.0.Mode=DMA_CIRCULAR
 Dma.TIM2_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM2_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM2_CH1.0.Priority=DMA_PRIORITY_LOW
@@ -133,7 +133,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -176,6 +176,8 @@ TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.ICFilter_CH1=2
 TIM2.IPParameters=Prescaler,Channel-Input_Capture1_from_TI1,ICFilter_CH1
 TIM2.Prescaler=99
+TIM5.IPParameters=Prescaler
+TIM5.Prescaler=99
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
